# startalk_pc_v2

./: CMakeLists.txt  QTalk_en.ts  README.md
CustomUi/: CMakeLists.txt  GroupMemberPopWnd.hpp  HeadPhotoLab.cpp  HeadPhotoLab.h  LinkButton.cpp  LinkButton.h  LiteMessageBox.cpp  LiteMessageBox.h  MedalWgt.cpp  MedalWgt.h  NavigationItem.cpp  NavigationItem.h  QtMessageBox.cpp  QtMessageBox.h  SearchEdit.hpp  ShadowHeadPhoto.cpp  ShadowHeadPhoto.h  TextEdit.cpp  TextEdit.h  UShadowBorder.cpp  UShadowBorder.h  UShadowEffect.cpp  UShadowEffect.h  UShadowWnd.cpp  UShadowWnd.h  customui.cpp  customui.h  customui_global.h  ushadowdialog.qrc
DataBasePlug/: CMakeLists.txt  CacheDataDao.cpp  CacheDataDao.h  ConfigDao.cpp  ConfigDao.h  DaoInterface.h  DataBasePlug.cpp  DataBasePlug.h  DbConfig.cpp  DbConfig.h  FriendListDao.cpp  FriendListDao.h  GroupDao.cpp  GroupDao.h  GroupMemberDao.cpp  GroupMemberDao.h  MedalListDao.cpp  MedalListDao.h  MessageDao.cpp  MessageDao.h  QuickReplyDao.cpp  QuickReplyDao.h  SessionListDao.cpp  SessionListDao.h  TriggerConfig.cpp  TriggerConfig.h  UserDao.cpp  UserDao.h  UserMedalDao.cpp  UserMedalDao.h  UserMemberDao.cpp  UserMemberDao.h  UserSupplementDao.cpp  UserSupplementDao.h  databaseplug_global.h  dllmain.cpp
Emoticon/: CMakeLists.txt  EmoCellWidget.cpp  EmoCellWidget.h  EmoIconWgt.cpp  EmoIconWgt.h  EmoLstItemWgt.cpp  EmoLstItemWgt.h  EmoPreviewWgt.cpp  EmoPreviewWgt.h  EmoticonMainWgt.cpp  EmoticonMainWgt.h  EmoticonManager.cpp  EmoticonManager.h  EmoticonStruct.h  EmoticonView.cpp  EmoticonView.h  LocalEmoticon.cpp  LocalEmoticon.h  MessageManager.cpp  MessageManager.h  NetEmoticon.cpp  NetEmoticon.h  emoticon.qrc  emoticon_global.h
EventBus/: CMakeLists.txt  Event.hpp  EventBus.cpp  EventBus.h  EventHandler.hpp  HandlerRegistration.hpp  Object.hpp  eventbus_global.h
LogicCommunication/: CMakeLists.txt  Communication.cpp  Communication.h  FileHelper.cpp  FileHelper.h  GroupManager.cpp  GroupManager.h  HotLinesConfig.cpp  HotLinesConfig.h  MessageManager.cpp  MessageManager.h  OfflineMessageManager.cpp  OfflineMessageManager.h  OnLineManager.cpp  OnLineManager.h  SearchManager.cpp  SearchManager.h  UserConfig.cpp  UserConfig.h  UserManager.cpp  UserManager.h  communication_global.h  dllMain.cpp
LogicManager/: CMakeLists.txt  LogicManager.cpp  LogicManager.h  logicmanager_global.h
Platform/: AppSetting.cpp  AppSetting.h  CMakeLists.txt  NavigationManager.cpp  NavigationManager.h  Platform.cpp  Platform.h  SystemDefine.h  dbPlatForm.cpp  dbPlatForm.h  platform_global.h
QTalk/: CMakeLists.txt  MacApp.h  MacApp.mm  MainWindow.cpp  MainWindow.h  MessageManager.cpp  MessageManager.h  NoOperationThread.cpp  NoOperationThread.h  QTalk.qrc  QTalkApp.cpp  QTalkApp.h  QtStruct.h  SystemTray.cpp  SystemTray.h  UIGolbalManager.cpp  UIGolbalManager.h  main.cpp  pluginmanager.cpp  pluginmanager.h  startalk.info.plist  style.qrc  stylesheetmanager.cpp  stylesheetmanager.h  test_inc.h
QtUtil/: CMakeLists.txt  QtalkUtil.cpp  QtalkUtil.h  qtutil_global.h
Screenshot/: CMakeLists.txt  FullScreenWidget.cpp  FullScreenWidget.h  Screenshot.rc  SnipScreenTool.cpp  SnipScreenTool.h  SnipScreenToolBar.cpp  SnipScreenToolBar.h  floatTextEdit.cpp  floatTextEdit.h  image1.qrc  screenshot_global.h  style.qrc
UIAddressBook/: AddressBookPanel.cpp  AddressBookPanel.h  AddressBookPlug.cpp  AddressBookPlug.h  CMakeLists.txt  CreatGroupPoupWnd.cpp  CreatGroupPoupWnd.h  ListItemView.cpp  ListItemView.h  MessageManager.cpp  MessageManager.h  StaffDelegate.cpp  StaffDelegate.h  StaffStructure.cpp  StaffStructure.h  UserCard.cpp  UserCard.h  addressbook.json  image1.qrc  uiaddressbook_global.h
UICardManager/: CMakeLists.txt  CardManager.cpp  CardManager.h  CardManagerPlug.cpp  CardManagerPlug.h  GroupCard.cpp  GroupCard.h  UICardManager.json  UserCard.cpp  UserCard.h  UserCardMsgManager.cpp  UserCardMsgManager.h  cardmanager_global.h  image1.qrc
UIChatViewPlug/: AtMessageTip.cpp  AtMessageTip.h  AtMessageView.cpp  AtMessageView.h  CMakeLists.txt  ChatMainWgt.cpp  ChatMainWgt.h  ChatUtil.cpp  ChatUtil.h  ChatViewMainPanel.cpp  ChatViewMainPanel.h  GIFManager.cpp  GIFManager.h  GroupChatSidebar.cpp  GroupChatSidebar.h  GroupItemDelegate.cpp  GroupItemDelegate.h  GroupMember.cpp  GroupMember.h  GroupTopic.cpp  GroupTopic.h  InputWgt.cpp  InputWgt.h  MacNotification.h  MacNotification.mm  MessageManager.cpp  MessageManager.h  MessagePrompt.cpp  MessagePrompt.h  NativeChatStruct.h  NewMessageTip.cpp  NewMessageTip.h  QchatMoreFun.cpp  QchatMoreFun.h  QuickReplyWnd.cpp  QuickReplyWnd.h  SelectUserWnd.cpp  SelectUserWnd.h  SendProductWnd.cpp  SendProductWnd.h  (+18 more)
UICom/: CMakeLists.txt  StyleDefine.cpp  StyleDefine.h  UIEntity.h  uicom.cpp  uicom.h  uicom_global.h
UIGroupManager/: AddGroupEdit.cpp  AddGroupEdit.h  BatchAddMemberWnd.cpp  BatchAddMemberWnd.h  CMakeLists.txt  ChoseMemberWgt.cpp  ChoseMemberWgt.h  MessageManager.cpp  MessageManager.h  SearchView.cpp  SearchView.h  SearchWgt.cpp  SearchWgt.h  TreeItemDelegate.cpp  TreeItemDelegate.h  UIGroupManager.cpp  UIGroupManager.h  UIGroupManager.json  UIGroupManagerPlug.cpp  UIGroupManagerPlug.h  image1.qrc  uigroupmanager_global.h
UILoginPlug/: AddNavWnd.cpp  AddNavWnd.h  CMakeLists.txt  LoginPanel.cpp  LoginPanel.h  MessageManager.cpp  MessageManager.h  NavManager.cpp  NavManager.h  NavView.cpp  NavView.h  QWebLogin.cpp  QWebLogin.h  UILoginPlug.cpp  UILoginPlug.h  image1.qrc  login.json  tips.xml  uiloginplug_global.h
UINavigationPlug/: CMakeLists.txt  ContactFrm.cpp  ContactFrm.h  MessageManager.cpp  MessageManager.h  MultifunctionFrm.cpp  MultifunctionFrm.h  NavigationMianPanel.cpp  NavigationMianPanel.h  SessionFrm.cpp  SessionFrm.h  SessionItemFrm.cpp  SessionItemFrm.h  SessionitemDelegate.cpp  SessionitemDelegate.h  TcpDisconnect.cpp  TcpDisconnect.h  UINavigationPlug.cpp  UINavigationPlug.h  image1.qrc  navigation.json  uinavigationplug_global.h
UIOAManager/: CMakeLists.txt  MessageManager.cpp  MessageManager.h  NavigationItem.cpp  NavigationItem.h  OADefine.h  OAMainWidget.cpp  OAMainWidget.h  OAManagerPlug.h  (+7 more)
(+351 files in other folders)
